@@ -1,40 +1,79 @@
-# Flappy Ghost inspiration
+# 👻 Flappy Ghost Inspiration
 
-## Overview
+A **JavaFX RPG twist** on Flappy Bird:  
+Instead of being the hero, you play as the **enemy**, collecting coins while avoiding or defeating heroes that stand in your way.
 
-This JavaFX RPG flips roles: you play as an enemy collecting coins and avoiding or defeating heroes.
+<p align="center">
+  <img src="./assets/flappyluffy.gif" alt="Game preview" width="500"/>
+</p>
 
-![Game preview](https://i.ibb.co/3YVjftx/IMG-1317.jpg)
+---
 
-## Game Mechanics
+## 🎮 Features & Mechanics
 
-- **Movement**: Automatic right movement; jump with spacebar.
-- **Objective**: Collect coins, avoid heroes.
-- **Difficulty**: Increases with each coin collected.
+- **Movement**:
+    - Automatic right movement
+    - Jump with **Spacebar**
 
-## Heroes
+- **Objective**:
+    - Collect coins to increase score
+    - Avoid or eliminate heroes
 
-- **Melee**: Instant death on contact; 5 coins if defeated.
-- **Stealth**: Lose 10 coins on contact; 8 coins if defeated.
-- **Tank**: Halves health on contact; 7 coins if defeated.
+- **Difficulty Scaling**:
+    - Enemy speed starts at **120 px/s**
+    - Speed increases with every coin collected
+    - Gravity and jump physics applied
 
-## Coins
+- **Shooting**:
+    - Unlimited bullets
+    - Press **E** to shoot
+    - **1s cooldown** between shots
 
-- Appear randomly, increase gold count when collected.
+---
 
-## Enemy
+## 🦸 Heroes
 
-- Initial speed: 120 pixels/second, increases with coins.
-- Gravity and jump mechanics affect vertical movement.
-- Bounces off screen edges.
+- **Melee** ⚔️: Instant death on contact; **+5 coins** if defeated.
+- **Stealth** 🕵️: Lose **10 coins** on contact; **+8 coins** if defeated.
+- **Tank** 🛡️: Halves health on contact; **+7 coins** if defeated.
 
-## Shooting
+---
 
-- Unlimited bullets, shoot with 'E'.
-- 1-second cooldown between shots.
-  
-## Background and Window
+## 🪙 Coins
 
-- The game window is centered on the enemy, with a scrolling background.
-- UI displays score and health percentage, with a pause button included.
+- Appear randomly throughout gameplay
+- Increase score when collected
 
+---
+
+## 🖥️ UI & Background
+
+- Scrolling background, centered on the enemy
+- HUD displays: **score** + **health %**
+- Includes a **pause button**
+
+---
+
+## ⌨️ Controls
+
+| Action        | Key      |
+|---------------|----------|
+| Jump          | W        |
+| Shoot         | E        |
+| Pause         | Spacebar |
+
+---
+
+## 🚀 Getting Started
+
+### Prerequisites
+- Java **17+**
+- JavaFX SDK (preferably 21+) installed and added to classpath
+
+### Run the Game
+
+Please use either IntelliJ or Eclipse. The game hasn't been tested on a non-dedicated Java IDE 
+Please add the following to your VM options inside your run configuration before running the app:
+```
+--module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml
+```
